#9494 - Fix vertical alignment of opt-in checkbox (front-end)

--- a/public/less/frontend/components/simple-form-v1.less
+++ b/public/less/frontend/components/simple-form-v1.less
@@ -46,7 +46,7 @@
     }
     .thank-you {
         padding: 0;
-        margin-bottom: -70px;        
+        margin-bottom: -70px;
         h3{
             margin-bottom: 50px !important;
         }
@@ -171,7 +171,7 @@
         float: left;
         margin-bottom: 5px;
         margin-top: 2px;
-        
+
         input{
             margin: 0;
             padding: 0;
@@ -179,6 +179,11 @@
             width: 16px;
             height: 16px;
             position: relative;
+        }
+
+        .optin-checkbox {
+            font-height: 18px;
+            vertical-align: middle;
         }
     }
     .form-checkbox-label{
