--- a/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
@@ -82,6 +82,11 @@
             height: 16px;
             position: relative;
         }
+
+        .optin-checkbox {
+            font-height: 18px;
+            vertical-align: middle;
+        }
     }
     .form-checkbox-label{
         width: 99%;
